--- a/app/src/main/res/layout/fragment_select_course.xml
+++ b/app/src/main/res/layout/fragment_select_course.xml
@@ -12,11 +12,16 @@
         <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            <TableLayout
-                    android:id="@+id/courses_table"
-                    style="@style/Widget.Scorecard.Table.Layout"
+            <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                <TableLayout
+                        android:id="@+id/courses_table"
+                        style="@style/Widget.Scorecard.Table.Layout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
         </HorizontalScrollView>
     </androidx.core.widget.NestedScrollView>
 
