--- a/app/src/main/res/layout/course_tees_section.xml
+++ b/app/src/main/res/layout/course_tees_section.xml
@@ -8,11 +8,16 @@
     <HorizontalScrollView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-        <TableLayout
-                android:id="@+id/course_tee_table"
-                style="@style/Widget.Scorecard.Table.Layout"
+        <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            <TableLayout
+                    android:id="@+id/course_tee_table"
+                    style="@style/Widget.Scorecard.Table.Layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+        </LinearLayout>
     </HorizontalScrollView>
     <com.google.android.material.button.MaterialButton
             android:id="@+id/create_tee_button"
