--- a/app/src/main/res/layout/fragment_games.xml
+++ b/app/src/main/res/layout/fragment_games.xml
@@ -9,12 +9,16 @@
     <HorizontalScrollView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-        <TableLayout
-                android:id="@+id/games_table"
-                style="@style/Widget.Scorecard.Table.Layout"
-                android:shrinkColumns="0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-        </TableLayout>
+         <LinearLayout
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:orientation="vertical">
+             <TableLayout
+                     android:id="@+id/games_table"
+                     style="@style/Widget.Scorecard.Table.Layout"
+                     android:shrinkColumns="0"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"/>
+         </LinearLayout>
     </HorizontalScrollView>
 </androidx.core.widget.NestedScrollView>
